--- a/package.json
+++ b/package.json
@@ -1,19 +1,35 @@
 {
   "name": "treebank-wordcloud",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
+  "homepage": "https://perseids-project.github.io/treebank-wordcloud/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.2",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "gh-pages": "^3.1.0",
+    "perseids-react-components": "^1.1.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "typeface-arimo": "^0.0.72",
+    "typeface-tinos": "^0.0.72"
   },
   "scripts": {
+    "deploy": "yarn deploy-github && yarn deploy-perseids",
+    "predeploy-github": "yarn run build",
+    "deploy-github": "yarn run cleanup && gh-pages -d build",
+    "predeploy-perseids": "PUBLIC_URL='/polytonic' yarn run build",
+    "deploy-perseids": "yarn run cleanup && gh-pages -d build -b perseids-build",
+    "cleanup": "rm -rf node_modules/gh-pages/.cache",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp build/index.html build/404.html",
     "test": "react-scripts test",
+    "lint": "eslint --ext=js --ext=jsx .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
