--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.2",
+    "cross-fetch": "^3.0.5",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-jest": "^23.20.0",
     "gh-pages": "^3.1.0",
@@ -17,6 +18,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-wordcloud": "^1.2.7",
     "typeface-arimo": "^0.0.72",
     "typeface-tinos": "^0.0.72"
   },
