--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "deploy": "yarn deploy-github && yarn deploy-perseids",
     "predeploy-github": "yarn run build",
     "deploy-github": "yarn run cleanup && gh-pages -d build",
-    "predeploy-perseids": "PUBLIC_URL='/polytonic' yarn run build",
+    "predeploy-perseids": "PUBLIC_URL='/treebank-wordcloud' yarn run build",
     "deploy-perseids": "yarn run cleanup && gh-pages -d build -b perseids-build",
     "cleanup": "rm -rf node_modules/gh-pages/.cache",
     "start": "react-scripts start",
