--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,8 @@ jobs:
       # - name: Audit dependencies
       #   - run: yarn audit
 
-      # - name: Run tests
-      #   run: yarn test --coverage
-      #   env:
-      #     CI: true
+      - name: Run tests
+        run: yarn test
 
       - name: Build
         run: yarn build
