--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,3 +42,4 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
           BRANCH: perseids-build
           FOLDER: build
+          CLEAN: true
