--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Treebank Word Cloud",
-  "name": "Treebank word cloud explorer",
+  "short_name": "Treebank Virtual Reality",
+  "name": "Treebank virtual reality explorer",
   "icons": [
     {
       "src": "favicon.ico",
