--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "treebank-wordcloud",
+  "name": "treebank-vr",
   "version": "0.0.2",
   "private": true,
-  "homepage": "https://perseids-project.github.io/treebank-wordcloud/",
+  "homepage": "https://perseids-project.github.io/treebank-vr/",
   "dependencies": {
     "bootstrap": "^4.5.2",
     "cross-fetch": "^3.0.5",
@@ -15,7 +15,6 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-wordcloud": "^1.2.7",
     "typeface-arimo": "^0.0.72",
     "typeface-tinos": "^0.0.72"
   },
@@ -23,7 +22,7 @@
     "deploy": "yarn deploy-github && yarn deploy-perseids",
     "predeploy-github": "yarn run build",
     "deploy-github": "yarn run cleanup && gh-pages -d build",
-    "predeploy-perseids": "PUBLIC_URL='/treebank-wordcloud' yarn run build",
+    "predeploy-perseids": "PUBLIC_URL='/treebank-vr' yarn run build",
     "deploy-perseids": "yarn run cleanup && gh-pages -d build -b perseids-build",
     "cleanup": "rm -rf node_modules/gh-pages/.cache",
     "start": "react-scripts start",
