update eslint config for deployment

--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ REACT_APP_SITE_NAME="The Perseids Project"
 REACT_APP_TITLE="Treebank Virtual Reality"
 REACT_APP_DESCRIPTION="Treebank virtual reality explorer"
 REACT_APP_URL="https://apps.perseids.org/treebank-vr"
+
+EXTEND_ESLINT=true
